# learning-rust-basic-advance

./: Cargo.toml  README.md
benches/: sorting_benchmark.rs
procedural_macro/: Cargo.toml
procedural_macro/src/: lib.rs
src/: lib.rs  order.rs  product.rs
src/modules/: benchmark_testing.rs  customer.rs  enums.rs  mod.rs  order.rs  product.rs  shapes.rs  student.rs  testing.rs
src/product/: category.rs
tests/: macros_test.rs  order_test.rs  quick_dev.rs
