[package]
name = "basic-advance"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "sorting_benchmark"
harness = false                                 # disable the default benchmarking system

[dependencies]
array_tool = "1.0.3"

[[bin]]
name = "var"
path = "src/bin/quickstart/var.rs"

[[bin]]
name = "primitive"
path = "src/bin/quickstart/primitive.rs"

[[bin]]
name = "compound"
path = "src/bin/quickstart/compound.rs"

[[bin]]
name = "function"
path = "src/bin/quickstart/function.rs"

[[bin]]
name = "conditionals"
path = "src/bin/quickstart/conditionals.rs"

[[bin]]
name = "controlflow"
path = "src/bin/quickstart/controlflow.rs"

[[bin]]
name = "extra"
path = "src/bin/quickstart/extra.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "ownership_basic"
path = "src/bin/ownership/basic.rs"

[[bin]]
name = "own_function"
path = "src/bin/ownership/own_function.rs"

[[bin]]
name = "borrowing"
path = "src/bin/ownership/borrowing.rs"

[[bin]]
name = "bor_function"
path = "src/bin/ownership/bor_function.rs"

[[bin]]
name = "dereferencing"
path = "src/bin/ownership/dereferencing.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "types_basic"
path = "src/bin/types/basic.rs"

[[bin]]
name = "types_functionality"
path = "src/bin/types/functionality.rs"

[[bin]]
name = "enums"
path = "src/bin/types/enums.rs"

[[bin]]
name = "option"
path = "src/bin/types/option.rs"

[[bin]]
name = "result"
path = "src/bin/types/result.rs"

[[bin]]
name = "hashmaps"
path = "src/bin/types/hashmaps.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "module"
path = "src/bin/organization/module.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "generics"
path = "src/bin/abstraction/generics.rs"

[[bin]]
name = "traits"
path = "src/bin/abstraction/traits.rs"

[[bin]]
name = "trait_bounds"
path = "src/bin/abstraction/trait_bounds.rs"

[[bin]]
name = "super_traits"
path = "src/bin/abstraction/super_traits.rs"

[[bin]]
name = "trait_objects"
path = "src/bin/abstraction/trait_objects.rs"

[[bin]]
name = "derived_marker_traits"
path = "src/bin/abstraction/derived_marker_traits.rs"

[[bin]]
name = "associated_types"
path = "src/bin/abstraction/associated_types.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "closures"
path = "src/bin/functional/closures.rs"

[[bin]]
name = "pointers"
path = "src/bin/functional/pointers.rs"

[[bin]]
name = "iterator"
path = "src/bin/functional/iterator.rs"

[[bin]]
name = "intoiterator"
path = "src/bin/functional/intoiterator.rs"

[[bin]]
name = "iterating_collections"
path = "src/bin/functional/iterating_collections.rs"

[[bin]]
name = "combinators"
path = "src/bin/functional/combinators.rs"

[[bin]]
name = "iterating_options"
path = "src/bin/functional/iterating_options.rs"