[package]
name = "basic-advance"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
anyhow = "1.0.93"
criterion = "0.5.1"
httpc-test = "0.1.10"

[[bench]]
name = "sorting_benchmark"
harness = false                                 # disable the default benchmarking system

[dependencies]
array_tool = "1.0.3"
negative-impl = "0.1.6"
rand = "0.8.5"
regex = "1.11.1"
tokio = {version = "1.41.0", features = ["full"]}
ureq = "2.10.1"
procedural_macro = { path = "procedural_macro" }
axum = "0.7.7"

[[bin]]
name = "var"
path = "src/bin/quickstart/var.rs"

[[bin]]
name = "primitive"
path = "src/bin/quickstart/primitive.rs"

[[bin]]
name = "compound"
path = "src/bin/quickstart/compound.rs"

[[bin]]
name = "function"
path = "src/bin/quickstart/function.rs"

[[bin]]
name = "conditionals"
path = "src/bin/quickstart/conditionals.rs"

[[bin]]
name = "controlflow"
path = "src/bin/quickstart/controlflow.rs"

[[bin]]
name = "extra"
path = "src/bin/quickstart/extra.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "ownership_basic"
path = "src/bin/ownership/basic.rs"

[[bin]]
name = "own_function"
path = "src/bin/ownership/own_function.rs"

[[bin]]
name = "borrowing"
path = "src/bin/ownership/borrowing.rs"

[[bin]]
name = "bor_function"
path = "src/bin/ownership/bor_function.rs"

[[bin]]
name = "dereferencing"
path = "src/bin/ownership/dereferencing.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "types_basic"
path = "src/bin/types/basic.rs"

[[bin]]
name = "types_functionality"
path = "src/bin/types/functionality.rs"

[[bin]]
name = "enums"
path = "src/bin/types/enums.rs"

[[bin]]
name = "option"
path = "src/bin/types/option.rs"

[[bin]]
name = "result"
path = "src/bin/types/result.rs"

[[bin]]
name = "hashmaps"
path = "src/bin/types/hashmaps.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "module"
path = "src/bin/organization/module.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "generics"
path = "src/bin/abstraction/generics.rs"

[[bin]]
name = "traits"
path = "src/bin/abstraction/traits.rs"

[[bin]]
name = "trait_bounds"
path = "src/bin/abstraction/trait_bounds.rs"

[[bin]]
name = "super_traits"
path = "src/bin/abstraction/super_traits.rs"

[[bin]]
name = "trait_objects"
path = "src/bin/abstraction/trait_objects.rs"

[[bin]]
name = "derived_marker_traits"
path = "src/bin/abstraction/derived_marker_traits.rs"

[[bin]]
name = "associated_types"
path = "src/bin/abstraction/associated_types.rs"

[[bin]]
name = "async_traits"
path = "src/bin/abstraction/async_traits.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "closures"
path = "src/bin/functional/closures.rs"

[[bin]]
name = "pointers"
path = "src/bin/functional/pointers.rs"

[[bin]]
name = "iterator"
path = "src/bin/functional/iterator.rs"

[[bin]]
name = "intoiterator"
path = "src/bin/functional/intoiterator.rs"

[[bin]]
name = "iterating_collections"
path = "src/bin/functional/iterating_collections.rs"

[[bin]]
name = "combinators"
path = "src/bin/functional/combinators.rs"

[[bin]]
name = "iterating_options"
path = "src/bin/functional/iterating_options.rs"

## switch rust to nightly version to run this file  
# [[bin]]
# name = "async_closures"
# path = "src/bin/functional/async_closures.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "concrete_lifetimes"
path = "src/bin/memory/concrete_lifetimes.rs"

[[bin]]
name = "generic_lifetimes"
path = "src/bin/memory/generic_lifetimes.rs"

[[bin]]
name = "lifetime_elision"
path = "src/bin/memory/lifetime_elision.rs"

[[bin]]
name = "lifetimes_structs"
path = "src/bin/memory/lifetimes_structs.rs"

[[bin]]
name = "box_smart_pointer"
path = "src/bin/memory/box_smart_pointer.rs"

[[bin]]
name = "rc_smart_pointer"
path = "src/bin/memory/rc_smart_pointer.rs"

[[bin]]
name = "refcell_smart_pointer"
path = "src/bin/memory/refcell_smart_pointer.rs"

[[bin]]
name = "refcell_example"
path = "src/bin/memory/refcell_example.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "linked_list_part1"
path = "src/bin/data_structure/linked_list_part1.rs"

[[bin]]
name = "linked_list_part2"
path = "src/bin/data_structure/linked_list_part2.rs"

[[bin]]
name = "doubly_linked_list"
path = "src/bin/data_structure/doubly_linked_list.rs"

[[bin]]
name = "reference_circles"
path = "src/bin/data_structure/reference_circles.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "init_struct"
path = "src/bin/design_patterns/init_struct.rs"

[[bin]]
name = "builder"
path = "src/bin/design_patterns/builder.rs"

[[bin]]
name = "simplify_struct"
path = "src/bin/design_patterns/simplify_struct.rs"

[[bin]]
name = "composition"
path = "src/bin/design_patterns/composition.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "sized_unsized"
path = "src/bin/size/sized_unsized.rs"

[[bin]]
name = "sized_references"
path = "src/bin/size/sized_references.rs"

[[bin]]
name = "sized_traits"
path = "src/bin/size/sized_traits.rs"

[[bin]]
name = "sized_generics"
path = "src/bin/size/sized_generics.rs"

[[bin]]
name = "unsized_coercion"
path = "src/bin/size/unsized_coercion.rs"

## switch rust to nightly version to run this file  
# [[bin]]
# name = "zero_sized_never"
# path = "src/bin/size/zero_sized_never.rs"

[[bin]]
name = "zero_sized_unit_type"
path = "src/bin/size/zero_sized_unit_type.rs"

[[bin]]
name = "zero_sized_unit_struct"
path = "src/bin/size/zero_sized_unit_struct.rs"

[[bin]]
name = "zero_sized_phantom_data"
path = "src/bin/size/zero_sized_phantom_data.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "basic_threads"
path = "src/bin/concurrency/basic_threads.rs"

[[bin]]
name = "ownership_threads"
path = "src/bin/concurrency/ownership_threads.rs"

[[bin]]
name = "message_channels_p1"
path = "src/bin/concurrency/message_channels_p1.rs"

[[bin]]
name = "message_channels_p2"
path = "src/bin/concurrency/message_channels_p2.rs"

[[bin]]
name = "sharing_states_p1"
path = "src/bin/concurrency/sharing_states_p1.rs"

[[bin]]
name = "sharing_states_p2"
path = "src/bin/concurrency/sharing_states_p2.rs"

[[bin]]
name = "barriers"
path = "src/bin/concurrency/barriers.rs"

[[bin]]
name = "scoped_threads"
path = "src/bin/concurrency/scoped_threads.rs"

[[bin]]
name = "thread_park"
path = "src/bin/concurrency/thread_park.rs"

[[bin]]
name = "async_await"
path = "src/bin/concurrency/async_await.rs"

[[bin]]
name = "tokio_tasks"
path = "src/bin/concurrency/tokio_tasks.rs"

[[bin]]
name = "web_scrapping"
path = "src/bin/concurrency/web_scrapping.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "declarative"
path = "src/bin/macros/declarative.rs"

[[bin]]
name = "capturing_types"
path = "src/bin/macros/capturing_types.rs"

[[bin]]
name = "repeating_patterns"
path = "src/bin/macros/repeating_patterns.rs"

[[bin]]
name = "practice"
path = "src/bin/macros/practice.rs"

[[bin]]
name = "question_mark"
path = "src/bin/macros/question_mark.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "word_anagrams_grouping"
path = "src/bin/reallife_problem/word_anagrams_grouping.rs"

[[bin]]
name = "popularity_scores"
path = "src/bin/reallife_problem/popularity_scores.rs"

[[bin]]
name = "highest_stock_price"
path = "src/bin/reallife_problem/highest_stock_price.rs"

[[bin]]
name = "finding_employee_no_meeting"
path = "src/bin/reallife_problem/finding_employee_no_meeting.rs"

[[bin]]
name = "longest_working_hrs"
path = "src/bin/reallife_problem/longest_working_hrs.rs"

[[bin]]
name = "items_suggestion"
path = "src/bin/reallife_problem/items_suggestion.rs"

[[bin]]
name = "items_ranges_search"
path = "src/bin/reallife_problem/items_ranges_search.rs"

[[bin]]
name = "fetching_top_products"
path = "src/bin/reallife_problem/fetching_top_products.rs"

[[bin]]
name = "word_completion"
path = "src/bin/reallife_problem/word_completion.rs"

[[bin]]
name = "recently_purchased_products"
path = "src/bin/reallife_problem/recently_purchased_products.rs"

[[bin]]
name = "showing_participants_online_meeting"
path = "src/bin/reallife_problem/showing_participants_online_meeting.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "web_basic"
path = "src/bin/web/basic.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "file_handling"
path = "src/bin/file/file_handling.rs"

[[bin]]
name = "directory_handling"
path = "src/bin/file/directory_handling.rs"

[[bin]]
name = "regex_part1"
path = "src/bin/file/regex_part1.rs"

[[bin]]
name = "regex_part2"
path = "src/bin/file/regex_part2.rs"

[[bin]]
name = "string_literal"
path = "src/bin/file/string_literal.rs"

[[bin]]
name = "string_concatenate_ownership"
path = "src/bin/file/string_concatenate_ownership.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "inputs_coercion"
path = "src/bin/miscellaneous/inputs_coercion.rs"

[[bin]]
name = "efficient_tips"
path = "src/bin/miscellaneous/efficient_tips.rs"

[[bin]]
name = "todo_macros"
path = "src/bin/miscellaneous/todo_macros.rs"

[[bin]]
name = "performance_lints"
path = "src/bin/miscellaneous/performance_lints.rs"

[[bin]]
name = "must_not"
path = "src/bin/miscellaneous/must_not.rs"


#-----------------------------------------------------------------------------------------------------------#


[[bin]]
name = "hello_router"
path = "src/bin/axum/hello_router.rs"
